feat: add dark/light mode toggle

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,6 +70,6 @@
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground flex font-sans antialiased justify-center items-center h-screen w-screen overflow-hidden;
   }
 }
