--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,65 +4,50 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
-
+    --base: #F9F9FA;
+    --background: #FFFFFF;
+    --foreground: #0C0C0C;
+    --card: #FFFFFF;
+    --card-foreground: #0C0C0C;
+    --popover: #FFFFFF;
+    --popover-foreground: #0C0C0C;
+    --primary: #1C1A1D;
+    --primary-foreground: #F9F9FA;
+    --secondary: #F5F5F6;
+    --secondary-foreground: #1C1A1D;
+    --muted: #F5F5F6;
+    --muted-foreground: #757A84;
+    --accent: #F5F5F6;
+    --accent-foreground: #1C1A1D;
+    --destructive: #CC293D;
+    --destructive-foreground: #F9F9FA;
+    --border: #E8EAF0; 
+    --input: #E8EAF0; 
+    --ring: #0C0C0C; 
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --base: #0C0C0C;
+    --background: #000000;
+    --foreground: #F9F9FA;
+    --card: #0C0C0C;
+    --card-foreground: #F9F9FA;
+    --popover: #0C0C0C;
+    --popover-foreground: #F9F9FA;
+    --primary: #F9F9FA;
+    --primary-foreground: #1C1A1D;
+    --secondary: #2D2F34; 
+    --secondary-foreground: #F9F9FA;
+    --muted: #2D2F34;
+    --muted-foreground: #A8ACB9;
+    --accent: #2D2F34;
+    --accent-foreground: #F9F9FA;
+    --destructive: #982338; 
+    --destructive-foreground: #F9F9FA;
+    --border: #2D2F34;
+    --input: #2D2F34;
+    --ring: #DEE1EB;
   }
 
   * {
@@ -70,6 +55,10 @@
   }
 
   body {
-    @apply bg-background text-foreground flex font-sans antialiased justify-center items-center h-screen w-screen overflow-hidden;
+    @apply text-foreground flex font-sans antialiased justify-center items-center h-dvh w-full overflow-hidden bg-base;
+  }
+
+  main {
+    @apply h-[calc(100dvh-10%)] w-[calc(100dvw-10%)] bg-background rounded-[--radius] border border-solid flex flex-col;
   }
 }
