--- a/public/globals.css
+++ b/public/globals.css
@@ -4,50 +4,50 @@
 
 @layer base {
   :root {
-    --bgbase: #F9F9FA;
-    --background: #FFFFFF;
-    --foreground: #0C0C0C;
-    --card: #FFFFFF;
-    --card-foreground: #0C0C0C;
-    --popover: #FFFFFF;
-    --popover-foreground: #0C0C0C;
-    --primary: #1C1A1D;
-    --primary-foreground: #F9F9FA;
-    --secondary: #F5F5F6;
-    --secondary-foreground: #1C1A1D;
-    --muted: #F5F5F6;
-    --muted-foreground: #757A84;
-    --accent: #F5F5F6;
-    --accent-foreground: #1C1A1D;
-    --destructive: #CC293D;
-    --destructive-foreground: #F9F9FA;
-    --border: #E8EAF0; 
-    --input: #E8EAF0; 
-    --ring: #0C0C0C; 
+    --bgbase: 240 9% 98%;
+    --background: 0 0% 100%;
+    --foreground: 0 0% 5%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 5%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 5%;
+    --primary: 280 5% 11%;
+    --primary-foreground: 240 9% 98%;
+    --secondary: 240 5% 96%;
+    --secondary-foreground: 280 5% 11%;
+    --muted: 240 5% 96%;
+    --muted-foreground: 220 6% 49%;
+    --accent: 240 5% 96%;
+    --accent-foreground: 280 5% 11%;
+    --destructive: 353 67% 48%;
+    --destructive-foreground: 240 9% 98%;
+    --border: 225 21% 93%; 
+    --input: 225 21% 93%; 
+    --ring: 0 0% 5%; 
     --radius: 0.5rem;
   }
 
   .dark {
-    --bgbase: #0C0C0C;
-    --background: #000000;
-    --foreground: #F9F9FA;
-    --card: #0C0C0C;
-    --card-foreground: #F9F9FA;
-    --popover: #0C0C0C;
-    --popover-foreground: #F9F9FA;
-    --primary: #F9F9FA;
-    --primary-foreground: #1C1A1D;
-    --secondary: #2D2F34; 
-    --secondary-foreground: #F9F9FA;
-    --muted: #2D2F34;
-    --muted-foreground: #A8ACB9;
-    --accent: #2D2F34;
-    --accent-foreground: #F9F9FA;
-    --destructive: #982338; 
-    --destructive-foreground: #F9F9FA;
-    --border: #2D2F34;
-    --input: #2D2F34;
-    --ring: #DEE1EB;
+    --bgbase: 0 0% 5%;
+    --background: 0 0% 0%;
+    --foreground: 240 9% 98%;
+    --card: 0 0% 5%;
+    --card-foreground: 240 9% 98%;
+    --popover: 0 0% 5%;
+    --popover-foreground: 240 9% 98%;
+    --primary: 240 9% 98%;
+    --primary-foreground: 280 5% 11%;
+    --secondary: 223 7% 19%; 
+    --secondary-foreground: 240 9% 98%;
+    --muted: 223 7% 19%;
+    --muted-foreground: 226 11% 69%;
+    --accent: 223 7% 19%;
+    --accent-foreground: 240 9% 98%;
+    --destructive: 349 63% 37%; 
+    --destructive-foreground: 240 9% 98%;
+    --border: 223 7% 19%;
+    --input: 223 7% 19%;
+    --ring: 226 25% 90%;
   }
 
   * {
@@ -59,6 +59,6 @@
   }
 
   main {
-    @apply h-[calc(100dvh-10%)] w-[calc(100dvw-10%)] bg-background rounded-[--radius] border border-solid flex flex-col;
+    @apply h-[calc(100dvh-10%)] w-[calc(100dvw-5%)] bg-background rounded-[--radius] border border-solid flex flex-col;
   }
 }
