--- a/public/globals.css
+++ b/public/globals.css
@@ -55,10 +55,14 @@
   }
 
   body {
-    @apply text-foreground flex font-sans antialiased justify-center items-center h-dvh w-full overflow-hidden bg-bgbase;
+    @apply flex font-sans antialiased text-foreground justify-center items-center h-dvh w-full overflow-hidden bg-bgbase;
   }
 
   main {
-    @apply h-[calc(100dvh-10%)] w-[calc(100dvw-5%)] bg-background rounded-[--radius] border border-solid flex flex-col;
+    @apply md:h-[calc(100dvh-10%)] md:w-[calc(100dvw-5%)] h-[calc(100dvh-3%)] w-[calc(100dvw-5%)] bg-background rounded-[--radius] border flex flex-col overflow-hidden relative transition-all;
+  }
+
+  section {
+    @apply flex-1;
   }
 }
